# ratatui

./: .cliffignore  .cz.toml  .editorconfig  .gitignore  .markdownlint.yaml  .taplo.toml  AGENTS.md  APPS.md  ARCHITECTURE.md  BREAKING-CHANGES.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.json  LICENSE  MAINTAINERS.md  Makefile.toml  PERFORMANCE.md  README.md  RELEASE.md  SECURITY.md  bacon.toml  cliff.toml  clippy.toml  codecov.yml  committed.toml  debug_highlight_spacing.rs  deny.toml  e) add environment and id-token permissions for improved authentication  flake.nix  mise.toml  readme.md  release-plz.toml  rustfmt.toml  shell.nix  tatus  test_highlight_spacing.rs  tombi.toml  (+1 more)
examples/apps/advanced-widget-impl/: Cargo.toml  README.md
examples/apps/async/: Cargo.toml
examples/apps/async-github/: Cargo.toml  README.md
examples/apps/calendar-explorer/: Cargo.toml  README.md
examples/apps/constraint-explorer/: Cargo.toml  README.md
examples/apps/demo/: Cargo.toml  README.md
examples/apps/demo2/: Cargo.toml  README.md
examples/apps/mouse-drawing/: Cargo.toml  README.md
examples/apps/table/: Cargo.toml  README.md
examples/apps/tracing/: Cargo.toml  README.md
examples/apps/volatility-surface/: Cargo.toml  README.md
ratatui/: Cargo.toml
ratatui-core/: Cargo.toml  README.md
ratatui-core/src/: backend.rs  buffer.rs  error.rs  layout.rs  lib.rs  prelude.rs  result.rs  style.rs  symbols.rs  terminal.rs  text.rs  widgets.rs
ratatui-core/src/backend/: test.rs
ratatui-core/src/buffer/: assert.rs  buffer.rs  cell.rs  cell_width.rs  diff.rs  diff_iter.rs
ratatui-core/src/layout/: alignment.rs  constraint.rs  direction.rs  flex.rs  inset.rs  layout.rs  margin.rs  offset.rs  position.rs  rect.rs  size.rs  xlayout.rs
ratatui-core/src/style/: anstyle.rs  color.rs  palette.rs  palette_conversion.rs  stylize.rs
ratatui-core/src/symbols/: bar.rs  block.rs  border.rs  braille.rs  checkbox.rs  half_block.rs  line.rs  marker.rs  merge.rs  octant.rs  pixel.rs  scrollbar.rs  shade.rs
ratatui-core/src/terminal/: backend.rs  buffers.rs  cursor.rs  frame.rs  init.rs  inline.rs  render.rs  resize.rs  terminal.rs  viewport.rs
ratatui-core/src/text/: grapheme.rs  inline.rs  inline_text.rs  line.rs  masked.rs  overflow.rs  spacer.rs  span.rs  text.rs  unified.rs  width.rs
ratatui-core/src/widgets/: stateful_widget.rs  stateful_widget_ref.rs  widget.rs  widget_ref.rs
ratatui-core/tests/: rect.rs
ratatui-crossterm/: Cargo.toml  README.md  build.rs
ratatui-crossterm/src/: lib.rs
ratatui-layout/: Cargo.toml  README.md
ratatui-layout/examples/: action_surface.rs  component_frames.rs  container_dialog.rs  cursor_request.rs  external_participants.rs  focus_traversal.rs  form_dialog.rs  frame_snapshot.rs  grid_palette.rs  left_right_row.rs  modal_prompt.rs  modal_shell.rs  pointer_only_scroll_region.rs  pointer_targets.rs  profile_editor.rs  scroll_regions.rs  scrollable_pane.rs  selection_modes.rs  table_inspector.rs  text_input.rs  toolbar_targets.rs  tree_browser.rs  viewport.rs  virtual_list.rs  virtual_record_list.rs  visible_selection_filter.rs  visible_selection_virtual_list.rs
ratatui-layout/src/: action.rs  container.rs  cursor.rs  docs.rs  focus.rs  frame.rs  grid.rs  input.rs  lib.rs  linear.rs  list.rs  measure.rs  modal.rs  overlay.rs  pane.rs  participant.rs  pointer.rs  record_list.rs  regions.rs  scroll.rs  selection.rs  table.rs  text_input.rs  viewport.rs
ratatui-layout/use-cases/: 0001-command-toolbar-routing.md  0002-modal-dialog-coordination.md  0003-filtered-record-selection.md  0004-multi-pane-scroll-routing.md  0005-virtual-list-row-rendering.md  0006-virtual-table-inspection.md  0007-component-frame-composition.md  0008-mouse-overlays-and-disabled-targets.md  0009-form-editing.md  0010-frame-snapshots.md  0011-nested-event-routing-and-focus-scopes.md  README.md
ratatui-macros/: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
ratatui-macros/src/: layout.rs  lib.rs  line.rs  list_items.rs  row.rs  row_cells.rs  span.rs  table_rows.rs  text.rs
ratatui-macros/tests/: macros.rs
ratatui-macros/tests/ui/: fails.rs  fails.stderr
ratatui-termina/: Cargo.toml  README.md
ratatui-termina/examples/: termina.rs
ratatui-termina/src/: lib.rs
ratatui-termion/: Cargo.toml  README.md
ratatui-termion/src/: lib.rs
ratatui-termwiz/: Cargo.toml  README.md
ratatui-termwiz/src/: lib.rs
ratatui-widgets/: Cargo.toml  README.md
ratatui-widgets/examples/: README.md  barchart-grouped.rs  barchart.rs  block-collapsed-borders.rs  block.rs  calendar.rs  canvas.rs  chart.rs  checkbox.rs  collapsed-borders.rs  gauge.rs  line-gauge.rs  line_gauge.rs  list.rs  logo.rs  paragraph.rs  scrollbar.rs  shadow.rs  sparkline.rs  table-borders.rs  table.rs  tabs.rs
ratatui-widgets/src/: as_ref.rs  barchart.rs  block.rs  borders.rs  calendar.rs  canvas.rs  chart.rs  checkbox.rs  clear.rs  fill.rs  gauge.rs  lib.rs  list.rs  logo.rs  mascot.rs  paragraph.rs  polyfills.rs  reflow.rs  scrollbar.rs  sparkline.rs  table.rs  tabs.rs  transient.rs
ratatui-widgets/tests/: auto_traits.rs
ratatui/benches/: main.rs
ratatui/examples/: README.md  barchart-grouped.rs  barchart.rs  calendar.rs  canvas.rs  chart.rs  colors.rs  colors_rgb_termion.rs  colors_rgb_termwiz.rs  custom_widget.rs  flex.rs  inline.rs  layout.rs  line_gauge.rs  list-widget.rs  list.rs  minimal.rs  modifiers.rs  panic.rs  ratatui-logo.rs  scrollbar-widget.rs  scrollbar.rs  table-widget.rs  table.rs  user_input.rs  widget-ref-container.rs  widget_impl.rs
ratatui/src/: backend.rs  init.rs  lib.rs  prelude.rs  style.rs  terminal.rs  text.rs  widgets.rs
ratatui/tests/: backend_termion.rs  embedded_str2.rs  state_serde.rs  stateful_widget_ref_dyn.rs  stylize.rs  terminal.rs  widgets_auto_traits.rs  widgets_barchart.rs  widgets_block.rs  widgets_calendar.rs  widgets_canvas.rs  widgets_chart.rs  widgets_gauge.rs  widgets_list.rs  widgets_paragraph.rs  widgets_table.rs  widgets_tabs.rs
xtask/: Cargo.toml  README.md
xtask/src/: commands.rs  main.rs
(+650 files in other folders)
