[package]
name = "ratatui-crossterm"
version = "0.1.0"
edition = "2021"

[features]
default = ["underline-color"]

## enables the backend code that sets the underline color.
## Underline color is only supported by the [`CrosstermBackend`](backend::CrosstermBackend) backend,
## and is not supported on Windows 7.
underline-color = []

## Use terminal scrolling regions to make Terminal::insert_before less prone to flickering.
scrolling-regions = ["ratatui-core/scrolling-regions"]

[dependencies]
crossterm.workspace = true
document-features = { workspace = true, optional = true }
instability.workspace = true
ratatui-core = { workspace = true }

[dev-dependencies]
ratatui = { workspace = true, features = ["crossterm"] }
rstest.workspace = true
